feat: Change request body parameters in POST request
將 POST 請求中的 request body 參數 gender/country/platform 從 string
改為 []string (支援多選)
